# scalable-lp-baselines

./: .gitignore  EXPERIMENT_CONFIGS.md  NOTICE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements-freeze.cuda121.txt
baselines/: README.md  __init__.py  common.py  convert_embeddings_to_embedding_table.py  embedding_table_conversion.py
dataset_utils/: __init__.py  batch_transforms.py  batch_types.py  collators.py  config.py  dataset_config.py  distributed_utils.py  eval_data.py  iterable.py  loaders.py  metrics.py  negative_sampling.py  positive_edges.py  training_utils.py  utils.py
embedding_lp/: README.md  __init__.py  config.py  csr.py  train.py  trainer.py
embedding_table_utils/: README.md  __init__.py  api.py  checkpointing.py  chunked_state_dict.py  config.py  factory.py  init.py  optimizer_adapters.py  read_only.py  torchrec_backend.py  typing.py  vanilla_backend.py
graph_csr/: README.md  __init__.py  graph.py  io_utils.py  large_int32.py  large_int64_raw.py  serializer.py
node2vec/: README.md  SHARED_NEGATIVES.md  __init__.py  api.py  config.py  link_prediction.py  loss.py  model.py  random_walk.py  sampler.py  train.py  train_lp.py  trainer.py
scripts/: __init__.py  _common.py  convert_graph_csr_to_upper.py  prepare_dataset.py  prepare_ogb_dataset.py  run_ogb_experiments.py  sort_graph_csr_neighbors.py  temporal_split_graph_csr.py  watch_resources.py
seal/: README.md  __init__.py  config.py  data_bridge.py  graph_csr_dataset.py  graph_csr_extraction.py  graph_csr_kernels.py  models.py  seal_link_pred.py  utils.py
(+25 files in other folders)
